--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,39 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+html,body,#root,.App {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.App > .header {
+  text-align: center;
+  height: 80px;
+  line-height: 80px;
+  background-color: #000C17;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 0 2em;
+  border-radius: 5px;
+}
+
+.header h2 {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App > .content {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content .nav {
+  background-color: #000C17;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.content .content_right {
+  flex: 1;
+  padding: 1em;
+  overflow-y: hidden;
+  color: blue;
 }
